Fixed search results wrapping

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -75,13 +75,15 @@ body {
     flex-direction: column;
 }
 
-#search_results>li>a>span>div {
-    display: flex;
-}
-
 #search_results>li>a>span>div:nth-child(2) {
     font-size: 0.8em;
     color: grey;
+    /* line-break: anywhere; */
+    word-break: break-all;
+}
+
+#search_results>li>a>span>div:nth-child(2)>span {
+    display: inline-block;
 }
 
 #search_results>li>a>span>div:nth-child(2)>:nth-child(2) {
